@@ -1,4 +1,6 @@
 
+require 'rufus/tokyo'
+
 require 'rufus/tokyo/tyrant/lib'
 require 'rufus/tokyo/tyrant/abstract'
 require 'rufus/tokyo/tyrant/table'
